--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,13 @@ project(ProgettoAstar)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ProgettoAstar main.cpp Astar_algorithm/findpath.cpp Astar_algorithm/findpath.h Astar_algorithm/fsa.h Astar_algorithm/stlastar.h)
+add_executable(ProgettoAstar main.cpp Astar_algorithm/findpath.cpp Astar_algorithm/findpath.h Astar_algorithm/fsa.h Astar_algorithm/stlastar.h TileMap.cpp TileMap.h WorldMap.cpp WorldMap.h)
 
 set(SFML_STATIC_LIBRARIES TRUE)
 set(SFML_DIR C:/SFML/lib/cmake/SFML)
 find_package(SFML COMPONENTS system window graphics audio network REQUIRED)
 include_directories(c:/SFML/include)
-target_link_libraries(progettoAstar sfml-system sfml-window sfml-graphics sfml-audio )
+target_link_libraries(ProgettoAstar sfml-system sfml-window sfml-graphics sfml-audio )
 if(WIN32)
     file(GLOB BINARY_DEP_DLLS "${SFML_INCLUDE_DIR}/../bin/*.dll")
     file(COPY ${BINARY_DEP_DLLS} DESTINATION ${CMAKE_BINARY_DIR})
