refactor tolto move hero, move Enemy sostituiti con move in  Character.h e overridato nelle classi figlie

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ set(SFML_DIR C:/SFML/lib/cmake/SFML)
 
 find_package(SFML COMPONENTS system window graphics audio network REQUIRED)
 include_directories(c:/SFML/include)
-target_link_libraries(ProgettoAstar sfml-system sfml-window sfml-graphics sfml-audio)
+target_link_libraries(ProgettoAstar sfml-system sfml-window sfml-graphics sfml-audio core)
 
 
 if (WIN32)
