Aggiunto createDungeon da file e una mappa con il percorso verificato più corto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(ProgettoAstar)
 
 set(CMAKE_CXX_STANDARD 14)
 add_subdirectory(Test)
-set(SOURCE_FILES Dungeon.cpp Dungeon.h Astar_algorithm/findpath.cpp Astar_algorithm/findpath.h Astar_algorithm/fsa.h Astar_algorithm/stlastar.h TileMap.cpp TileMap.h Hero.cpp Hero.h Character.h Enemy.cpp Enemy.h)
-add_executable(ProgettoAstar main.cpp ${SOURCE_FILES} Character.cpp)
+set(SOURCE_FILES Dungeon.cpp Dungeon.h Astar_algorithm/findpath.cpp Astar_algorithm/findpath.h Astar_algorithm/fsa.h Astar_algorithm/stlastar.h TileMap.cpp TileMap.h Hero.cpp Hero.h Character.h Character.cpp Enemy.cpp Enemy.h)
+add_executable(ProgettoAstar main.cpp ${SOURCE_FILES})
 add_library(core ${SOURCE_FILES})
 
 set(SFML_STATIC_LIBRARIES TRUE)
